--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.devtools.restart.additional-exclude=dev/hilla/openapi.json
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
 vaadin.allowed-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 spring.jpa.defer-datasource-initialization = true
+
+spring.application.name=ai-demo
+#spring.ai.openai.api-key=${AZURE_OPENAI_KEY}
+spring.ai.openai.chat.options.model=gpt-3.5-turbo
