--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.jpa.defer-datasource-initialization = true
 
 spring.application.name=ai-demo
 #spring.ai.openai.api-key=${AZURE_OPENAI_KEY}
-spring.ai.openai.chat.options.model=gpt-3.5-turbo
+spring.ai.openai.chat.options.model=gpt-4o
